<?xml version="1.0"?>
<package format="2">
  <name>rqt_micro_epsilon_scancontrol</name>
  <version>0.0.1</version>
  <description>Micro Espsilon scanCONTROL sensor settings GUI</description>
  <maintainer email="d.kroezen@tudelft.nl">Dave Kroezen</maintainer>

  <url type="repository">https://github.com/sam-xl/scancontrol</url>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>micro_epsilon_scancontrol_msgs</depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
